@@ -23,6 +23,7 @@ import static io.jenetics.stat.StatisticsAssert.assertDistribution;
 import static io.jenetics.util.RandomRegistry.using;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.function.Function;
 import java.util.stream.IntStream;
@@ -58,11 +59,11 @@ public class RouletteWheelSelectorTest
 	public void minimize() {
 		using(new Random(7345), r -> {
 			final Function<Genotype<IntegerGene>, Integer> ff =
-				g -> g.getChromosome().getGene().getAllele();
+				g -> g.chromosome().gene().allele();
 
 			final Factory<Phenotype<IntegerGene, Integer>> ptf = () -> {
 				final Genotype<IntegerGene> gt = Genotype.of(IntegerChromosome.of(0, 100));
-				return Phenotype.of(gt, 1, gt.getGene().intValue());
+				return Phenotype.of(gt, 1, gt.gene().intValue());
 			};
 
 			final ISeq<Phenotype<IntegerGene, Integer>> population =
@@ -82,11 +83,11 @@ public class RouletteWheelSelectorTest
 	public void maximize() {
 		using(new Random(7345), r -> {
 			final Function<Genotype<IntegerGene>, Integer> ff =
-				g -> g.getChromosome().getGene().getAllele();
+				g -> g.chromosome().gene().allele();
 
 			final Factory<Phenotype<IntegerGene, Integer>> ptf = () -> {
 				final Genotype<IntegerGene> gt = Genotype.of(IntegerChromosome.of(0, 100));
-				return Phenotype.of(gt, 1, gt.getGene().intValue());
+				return Phenotype.of(gt, 1, gt.gene().intValue());
 			};
 
 			final ISeq<Phenotype<IntegerGene, Integer>> population =
@@ -153,8 +154,8 @@ public class RouletteWheelSelectorTest
 
 			printDistributions(
 				System.out,
-				Arrays.asList(""),
-				value -> new RouletteWheelSelector<DoubleGene, Double>(),
+				List.of(""),
+				value -> new RouletteWheelSelector<>(),
 				opt,
 				npopulation,
 				loops
