@@ -23,6 +23,7 @@ import static io.jenetics.stat.StatisticsAssert.assertDistribution;
 import static io.jenetics.util.RandomRegistry.using;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.function.Function;
 import java.util.stream.IntStream;
@@ -56,7 +57,7 @@ public class StochasticUniversalSelectorTest
 	@Test
 	public void selectMinimum() {
 		final Function<Genotype<IntegerGene>, Integer> ff = gt ->
-			gt.getChromosome().toSeq().stream()
+			gt.chromosome().stream()
 				.mapToInt(IntegerGene::intValue)
 				.sum();
 
@@ -67,7 +68,7 @@ public class StochasticUniversalSelectorTest
 			IntStream.range(0, 50)
 				.mapToObj(i -> {
 					final Genotype<IntegerGene> gt = gtf.newInstance();
-					return Phenotype.of(gt, 50, gt.getGene().intValue());
+					return Phenotype.of(gt, 50, gt.gene().intValue());
 				})
 				.collect(ISeq.toISeq());
 
@@ -129,8 +130,8 @@ public class StochasticUniversalSelectorTest
 
 			printDistributions(
 				System.out,
-				Arrays.asList(""),
-				value -> new StochasticUniversalSelector<DoubleGene, Double>(),
+				List.of(""),
+				value -> new StochasticUniversalSelector<>(),
 				opt,
 				npopulation,
 				loops
